Added swagger UI
